# ComfyUI_VisualCloze

./: .gitignore  README.md  __init__.py  app.py  inference.py  model_utils.py  processing.py  pyproject.toml  sample.py  train.py  visualcloze.py  visualcloze_node.py  visualcloze_wrapper.py
configs/data/: visualcloze.yaml
data/: __init__.py  data_reader.py  data_utils.py  dataset.py  degradation_utils.py  prefix_instruction.py
data/degradation_toolkit/: add_degradation_various.py  image_operators.py
data/degradation_toolkit/x_distortion/: blur.py  compression.py  contrast.py  quantization.py  spatter.py
docs/: DATASET.md  INSTALL.md
examples/: __init__.py  degradation_utils.py  gradio_tasks.py  gradio_tasks_editing.py  gradio_tasks_editing_subject.py  gradio_tasks_photodoodle.py  gradio_tasks_relighting.py  gradio_tasks_restoration.py  gradio_tasks_style.py  gradio_tasks_subject.py  gradio_tasks_tryon.py  gradio_tasks_unseen.py
examples/degradation_toolkit/x_distortion/: __init__.py  brightness.py  helper.py  noise.py  oversharpen.py  pixelate.py  saturate.py
exps/: sample.sh  train.sh
models/: math.py  model.py  sampling.py  util.py
models/modules/: image_embedders.py  layers.py  lora.py
transport/: __init__.py  integrators.py  transport.py
